Helm_TodoAppMicro_Services/Get_Task_TodoApplication/manifests_old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-tasks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-tasks
  template:
    metadata:
      labels:
        app: get-tasks
    spec:
      containers:
      - name: get-tasks
        image: containerregistry4dec2024.azurecr.io/gettask:v1
        ports:
        - containerPort: 8000
