Helm_TodoAppMicro_Services/Get_Task_TodoApplication/manifests_old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-tasks-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: get-tasks.raghavcorporation.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-tasks
            port: 
              number: 80
